--- a/src/index.css
+++ b/src/index.css
@@ -43,17 +43,61 @@ button {
   gap: 1rem;
 }
 
+.add {
+  display: grid;
+}
+
 .input {
+  grid-area: 1 / 1;
+  font-family: monospace;
   display: block;
   width: 100%;
-  height: 2.5rem;
+  height: 3rem;
   font-size: 2rem;
   text-align: center;
   border: none;
   border-radius: 0.25rem;
+  background-color: #505050;
+  color: var(--light-text);
+  border-bottom: 0.25rem solid #353535;
+  transition: background-color ease-out 0.3s;
+  transform: translateZ(0);
+}
+
+.input:focus {
+  outline: none;
+  background-color: #353535;
+}
+
+.input:focus + .line {
+  opacity: 1;
+  transform: scaleX(1);
+}
+
+.line {
+  grid-area: 1 / 1;
+  align-self: end;
+  opacity: 0;
+  height: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  background: linear-gradient(
+    90deg,
+    var(--success) 0%,
+    var(--success) 25%,
+    var(--fail) 25%,
+    var(--fail) 50%,
+    var(--pending) 50%,
+    var(--pending) 75%,
+    var(--queued) 75%,
+    var(--queued) 100%
+  );
+  transform: scaleX(0);
+  transition: transform ease-out 0.3s, opacity ease-out 0.3s;
 }
 
 .check {
+  font-family: monospace;
   height: 2.5rem;
   font-size: 1.5rem;
   border-radius: 0.25rem;
